--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Poppins';
   line-height: 1.5;
   font-weight: 400;
   font-synthesis: none;
@@ -7,6 +7,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
+}
+
+h1 {
+  margin: 0px;
 }
 
 a {
@@ -24,32 +28,17 @@ body {
   display: flex;
   place-items: center;
   min-height: 100vh;
+  max-height: 100vh;
 }
 
 .main {
-  width: 500px;
+  width: 100vw;
+  max-width: 800px;
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-
-.notification {
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin: auto;
-  top: 0;
-  background-color: aqua;
-  color: white;
-  border-radius: 8px;
-  width: 200px;
-  top: 10px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  place-items: center;
-  justify-content: center;
-  padding: 20px;
 }
