--- a/client/src/componets/navBar/navbar.module.css
+++ b/client/src/componets/navBar/navbar.module.css
@@ -8,3 +8,33 @@
     height: 10svh;
     box-sizing: border-box;
 }
+
+.ul {
+    list-style: none;
+    display: flex;
+}
+
+.li {
+    display: inline-block;
+    margin-left: 5px;
+    margin-right: 5px;
+    flex-grow: 1;
+}
+
+.a {
+    text-decoration: none;
+    display: block;
+    background-color: rgb(52, 52, 52);
+    color: white;
+    padding: 10px 15px;
+    border: solid;
+    border-width: 3px;
+    border-color: aliceblue;
+    border-radius: 5px;
+    transition: background-color 0.3s ease; /* Smooth transition on hover */
+  }
+
+.a:hover {
+    border-color: steelblue;
+    color: white;
+  }
