--- a/client/src/componets/hospital/hospital.module.css
+++ b/client/src/componets/hospital/hospital.module.css
@@ -1,9 +1,11 @@
-.home {
+.hospital {
     height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    place-items: center;
 }
+
 .list {
     overflow-y: scroll;
 }
