Hospital doesn't crash

--- a/client/src/componets/hospital/hospital.module.css
+++ b/client/src/componets/hospital/hospital.module.css
@@ -3,9 +3,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    place-items: center;
 }
 
 .list {
+    margin: auto;
     overflow-y: scroll;
 }
