--- a/client/src/componets/tiles/tile.module.css
+++ b/client/src/componets/tiles/tile.module.css
@@ -18,6 +18,7 @@
 
 .tileHeader {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 0%;
 }
 
 .border {
@@ -26,4 +27,8 @@
 
 .tileAddress {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.star {
+    margin-left:auto;
 }
