--- a/client/src/componets/hospital/hospital.module.css
+++ b/client/src/componets/hospital/hospital.module.css
@@ -3,9 +3,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-y: auto;
 }
 
-.list {
-    margin: auto;
-    overflow-y: scroll;
+.tiles {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
 }
