--- a/client/src/componets/hospital/hospital.module.css
+++ b/client/src/componets/hospital/hospital.module.css
@@ -7,8 +7,9 @@
 }
 
 .tiles {
+    width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     gap: 10px;
-
 }
