--- a/client/src/componets/tiles/tile.module.css
+++ b/client/src/componets/tiles/tile.module.css
@@ -1,19 +1,19 @@
 .tile_container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    /* Adjust the min and max width as needed */
-    gap: 20px;
-    /* Adjust the gap between grid items */
-    margin: auto;
+    width: 100%;
+    padding: 20px;
 }
 
 .tile {
     background-color: white;
-    padding: 10px;
-    width: fit-content;
-    height: fit-content;
-    box-sizing: border-box;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 0px 10px 10px 10px
+}
+
+.tile h1 {
+    margin: 0;
 }
 
 .tileHeader {
@@ -30,5 +30,5 @@
 }
 
 .star {
-    margin-left:auto;
+    margin-left: auto;
 }
