--- a/client/src/componets/modal/modal.module.css
+++ b/client/src/componets/modal/modal.module.css
@@ -1,3 +1,13 @@
+.modal {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    padding: 20px;
+    background-color: rgba(177, 177, 177, 0.6);
+}
+
 .tile {
     background-color: white;
     display: flex;
@@ -21,12 +31,20 @@
 }
 
 .tile {
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    transform: translate(50%, -50%);
     background-color: white;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding: 0px 10px 10px 10px
+    padding: 0px 10px 10px 10px;
+    width: 80%;
+    max-width: 450px;
+    max-height: 600px;
+    overflow-y: auto;
 }
 
 .tile h1 {
