--- a/client/src/componets/account/account.module.css
+++ b/client/src/componets/account/account.module.css
@@ -5,3 +5,16 @@
     align-items: center;
 }
 
+.tile {
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 0px 10px 10px 10px
+}
+
+.second {
+    display: flex;
+    justify-content: space-between;
+}
