--- a/client/src/componets/shelters/shelters.module.css
+++ b/client/src/componets/shelters/shelters.module.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
 }
 
 .tiles {
@@ -14,4 +15,5 @@
 
 .list {
     overflow-y: auto;
+    width: 90%;
 }
