--- a/client/src/componets/search/search.module.css
+++ b/client/src/componets/search/search.module.css
@@ -1,4 +1,4 @@
-.hospital {
+.shelters {
     height: 90vh;
     display: flex;
     flex-direction: column;
@@ -32,4 +32,15 @@
     100% {
         transform: rotate(360deg);
     }
+}
+
+.searchBox {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
 }
