--- a/client/src/componets/shelters/shelters.module.css
+++ b/client/src/componets/shelters/shelters.module.css
@@ -3,7 +3,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
 }
 
 .tiles {
@@ -16,4 +15,21 @@
 .list {
     overflow-y: auto;
     width: 90%;
+}
+
+.spin {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
