--- a/client/src/componets/account/account.module.css
+++ b/client/src/componets/account/account.module.css
@@ -11,10 +11,13 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding: 0px 10px 10px 10px
+    padding: 0px 10px 10px 10px;
+    width: 80%;
 }
 
 .second {
     display: flex;
     justify-content: space-between;
 }
+
+
